# TUM-WiSe23

./: README.md  bookmarks_2023_10_24.html  conda env bashes  some debugs  some shortcuts linux  terminal_log
01 CPP Programming/: coding - 快捷方式.lnk
01 CPP Programming/Other courses/00/: CMakeLists.txt
01 CPP Programming/Other courses/00/output/: hqcAPP
01 CPP Programming/Other courses/basic_algorithms/binary-search-tree/04-binary-search-tree-breadth-first/: main.cpp
01 CPP Programming/Other courses/basic_algorithms/heap-sort/03-MaxHeap-Shift-Down/: main.cpp
01 CPP Programming/Other courses/l_cmake/00/: CMakeLists.txt
01 CPP Programming/Other courses/l_cmake/00/output/: hqcAPP
01 CPP Programming/Other courses/l_cmake/01/: CMakeLists.txt
01 CPP Programming/Other courses/l_cmake/01/include/: addition.h  multiplication.h  printer.h
01 CPP Programming/Other courses/l_cmake/01/src/: add.cpp  div.cpp  main.cpp  mult.cpp  print.cpp  sub.cpp
01 CPP Programming/Other courses/l_cmake/01/src/ad/: add.cpp  sub.cpp
01 CPP Programming/Other courses/l_cmake/01/src/mu/: div.cpp  mult.cpp
01 CPP Programming/Other courses/l_cmake/01/src/pr/: ask.cpp  print.cpp
01 CPP Programming/Other courses/l_cmake/02/pointer/: CMakeLists.txt  main  main.cpp
01 CPP Programming/Other courses/l_cmake/02/stack/: CMakeLists.txt  main.cpp  pp.h
01 CPP Programming/exercise lecture/ex2/: looper.cpp
01 CPP Programming/exercise lecture/ex3/: CMakeLists.txt  main.cpp
01 CPP Programming/exercise lecture/ex3/inc/: header.h
01 CPP Programming/exercise lecture/ex3/src/: arrays.cpp  expressions.cpp  initials.cpp  references.cpp  typeconvert.cpp
01 CPP Programming/exercise lecture/ex4/: CMakeLists.txt  func.cpp  func.h  header.h  lamb.cpp  lamb.h  main.cpp
03 Machine Learning/: exercise_03_prob_inference.ipynb
03 Machine Learning/Other/coding/dt00/: CMakeLists.txt
03 Machine Learning/Other/coding/probs/: CMakeLists.txt  bayes.cpp  bayes.h  main.cpp
03 Machine Learning/Other/coding/wknn00/: CMakeLists.txt  README.MD  wknnc.cpp
03 Machine Learning/Other/coding/wknn00/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  wknnc
03 Machine Learning/Other/coding/wknn00/inc/: header.h  point.h
03 Machine Learning/Other/coding/wknn00/src/: classifyAPoint.cpp  comparison.cpp  wknnc.cpp
Homework/01 CPP Programming/: .swp  hw03 notes.aux  hw03 notes.tex
Homework/01 CPP Programming/hw/hw02/: CMakeLists.txt
Homework/01 CPP Programming/hw01/: hw01.cpp  library.h  test.cpp
Homework/01 CPP Programming/hw02/: CMakeLists.txt  combinatorics.cpp  run.cpp
Homework/01 CPP Programming/l01/: CMakeLists.txt
Homework/01 CPP Programming/l01/src/: main.cpp
Homework/05 Introduction to deep learning/exercise_01/: 1_introduction.ipynb  requirements.txt
Homework/05 Introduction to deep learning/exercise_01/exercise_code/networks/: dummy.py
Other/: bookmarks_2023_10_24.html
